--- a/portafolio.html
+++ b/portafolio.html
@@ -24,7 +24,7 @@
             <ul class="barra-list">
                 <a class="web-logo" href="#">WebStudio</a>
             <li><a class="link1" href="index.html">Estudio</a></li>
-            <li><a class="link1" href="portafolio.html">Portafolio</a></li>
+            <li><a class="link1 border" href="portafolio.html">Portafolio</a></li>
             <li><a class="link1" href="#">Contactos</a></li>
             </ul>
         </nav>
