--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
     <section class="nav-container">
         <div class="container barra-list">
+            <a class="web-logo" href="#">WebStudio</a>
         <nav class="nav-container">
             <ul class="barra-list">
-                <a class="web-logo" href="#">WebStudio</a>
-            <li><a class="link1" href="index.html">Estudio</a></li>
+            <li><a class="link1 border-page" href="index.html">Estudio</a></li>
             <li><a class="link1" href="portafolio.html">Portafolio</a></li>
             <li><a class="link1" href="#">Contactos</a></li>
             </ul>
@@ -258,7 +258,6 @@
         
         <section class="section">
             <div class="container">
-                <nav>
                     <h2 class="h2-subtitle">Clientes Regulares</h2>
                 <ul class="regular-clients">
                     
@@ -269,7 +268,6 @@
                     <li class="box-svg"><svg class="svg-redes"><use href="/icon.svg#compañia-5"></use></svg></li>
                     <li class="box-svg"><svg class="svg-redes"><use href="/icon.svg#compañia-6"></use></svg></li>
                 </ul>
-                </nav>
             </div>
         </section>
 
@@ -280,10 +278,10 @@
         <footer class="footer-font">
             <div class="container">
             <address>
-                <ul>
                 <a class="web-footer" href="#">WebStudio</a>
+                <ul>
                 <li><a class="ubicacion" href="#">
-                    Calz.Ticoman 500,ciudad de</br>
+                    Calz.Ticoman 500,ciudad de
                     Mexico,CDMX,Mexico</a></li>
                 <li><a class="link2" href="#">info@example.com</a></li>
                 <li><a class="link2" href="#">+52 55 5529 6000</a></li>
