--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <p class="ph2-list">
         Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.
             </p>
-        
         </div>
+        
         <ul>
         </div>
     </section>
@@ -277,9 +277,9 @@
 
         <footer class="footer-font">
             <div class="container">
-            <address>
                 <a class="web-footer" href="#">WebStudio</a>
-                <ul>
+            <address>
+                <ul class="city-footer">
                 <li><a class="ubicacion" href="#">
                     Calz.Ticoman 500,ciudad de
                     Mexico,CDMX,Mexico</a></li>
