--- a/portafolio.html
+++ b/portafolio.html
@@ -235,13 +235,11 @@
     </main>
 
 
-
-        <footer class="footer-font">
+    <footer class="footer-font">
         <div class="container">
+            <a class="web-footer" href="#">WebStudio</a>
         <address>
-          <a class="web-footer" href="#">WebStudio</a>
-            <ul class="footer-list">
-            
+            <ul class="city-footer">
             <li><a class="ubicacion" href="#">
                 Calz.Ticoman 500,ciudad de
                 Mexico,CDMX,Mexico</a></li>
@@ -262,6 +260,7 @@
                 <li class="list-svg-redes-f">
                     <svg class="icon-redes-f"><use href="/icon.svg#linked"></use></svg></li>
             </ul>
+
         </div>
         </footer>
     </body>
